# ChangeLog for sys-devel/distcc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/distcc/ChangeLog,v 1.211 2011/10/28 05:41:06 matsuu Exp $

*distcc-3.2_rc1 (28 Oct 2011)

  28 Oct 2011; MATSUU Takuto <matsuu@gentoo.org> -distcc-3.1-r4.ebuild,
  +files/distcc-config-3.2_rc1, +distcc-3.2_rc1.ebuild,
  +files/distcc-3.2_rc1-freedesktop.patch, +files/distcc-3.2_rc1-gssapi.patch,
  +files/distcc-3.2_rc1-python.patch, metadata.xml:
  Version bumped. Removed old version.

  30 Mar 2011; Christoph Mende <angelos@gentoo.org> distcc-2.18.3-r10.ebuild,
  distcc-3.0-r4.ebuild, distcc-3.1-r4.ebuild:
  Fix gtk+ slot deps

  28 Mar 2011; Gilles Dartiguelongue <eva@gentoo.org> distcc-3.1-r5.ebuild:
  Pin gtk+ to slot 2.

  06 Feb 2011; Mart Raudsepp <leio@gentoo.org> distcc-2.18.3-r10.ebuild:
  Drop to ~mips

*distcc-3.1-r5 (22 Dec 2010)

  22 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +distcc-3.1-r5.ebuild:
  Use Python 2, call python_mod_optimize() and python_mod_cleanup() (bug #316943).

  19 Oct 2009; Alexis Ballier <aballier@gentoo.org> distcc-3.1-r4.ebuild:
  keyword ~sparc-fbsd

  20 May 2009; Raúl Porcel <armin76@gentoo.org> distcc-3.1-r4.ebuild:
  arm/ia64/s390/sh stable wrt #269322

  15 May 2009; Tobias Klausmann <klausman@gentoo.org> distcc-3.1-r4.ebuild:
  Stable on alpha, bug #269322

  14 May 2009; Markus Meier <maekke@gentoo.org> distcc-3.1-r4.ebuild:
  amd64/x86 stable, bug #269322

  14 May 2009; Joseph Jezak <josejx@gentoo.org> distcc-3.1-r4.ebuild:
  Marked ppc/ppc64 stable for bug #269322.

  13 May 2009; Jeroen Roovers <jer@gentoo.org> distcc-3.1-r4.ebuild:
  Stable for HPPA (bug #269322).

  11 May 2009; Ferris McCormick <fmccor@gentoo.org> distcc-3.1-r4.ebuild:
  Sparc stable, bug #269322.

  11 May 2009; MATSUU Takuto <matsuu@gentoo.org> -distcc-3.1-r3.ebuild:
  Removed old version.

*distcc-3.1-r4 (07 Apr 2009)
