@@ -31,19 +31,16 @@ AUX distcc-gentoo-multilib-r1.patch 4245 RMD160 175cb4c2ce0e8ecb2262165b3fd9a0d8
 AUX distcc-gentoo-multilib.patch 3784 RMD160 f48a3f2f8c82379c30c9da0e49aa66ba34681882 SHA1 5a3ba956caaab2d5c6ef44ee3ded10a33ac870dc SHA256 d3af7a7592d0a11a35d294022b36feca2fb625e4799513bf56a79e0656278403
 AUX distcc-hardened.patch 1084 RMD160 0f11c9c8e8b56e91399b054fb57566e290a0baa5 SHA1 746f1905a9bc45ea7b71d71f4b1feba7d96d0f7f SHA256 dcf63f201cb7f4bf13eeb1485a5056c64370b9239d28e4acc77a47046dcda6cf
 AUX distcc-march-native.patch 934 RMD160 29908d5b5c4622285a78f221b2633e3ee495a648 SHA1 e1ac6912d55c9b3dda9b6f1a03c973ad1a85f359 SHA256 bc95daad65a3c3a7429b94b432b5d2aa470cb50d6e67c65303865df1e28831e7
-DIST distcc-3.0.tar.bz2 582700 RMD160 1e187fe09129dcc6e561bfb0cd0db9a43619acca SHA1 90cea1d7500e95d3c698e6ab9b9536a946f62824 SHA256 bb6f5674b619ef1438da67739d982e8a6b11e01f748708e0fcbe371c02f020fe
 DIST distcc-3.1.tar.bz2 588820 RMD160 82229c230e6917b0df7db275460579b02dbf6b60 SHA1 30663e8ff94f13c0553fbfb928adba91814e1b3a SHA256 f55dbafd76bed3ce57e1bbcdab1329227808890d90f4c724fcd2d53f934ddd89
 DIST distcc-3.2rc1.tar.bz2 609904 RMD160 505447b910d90ea403a98fe0d0a3a0fa92cd7039 SHA1 7564e4a4890ad6ff78ec0de620329b71179361e7 SHA256 311671e844625d7fdb18dd3d096cd855751cfe8de13827682bcb7beff9133b30
-EBUILD distcc-3.0-r4.ebuild 4701 RMD160 d4eeacc07577a450001553297b66c104a37ff9ed SHA1 1e86d66bc8e088ce620d690eb94323da79933392 SHA256 516006058b1dbea15ad0e33846bacdfd3f144bf7b252e714a71c4cc1f0c45837
-EBUILD distcc-3.1-r4.ebuild 4578 RMD160 037e54031a94d6bd931b6f49a8118a9b1e422cb6 SHA1 2b6d866770318c75b9bd3f808cec3762c33012db SHA256 78008265850d1471ef52d6f8cd7f4be71e3fb3bb94c69e81319267f40de1ad87
 EBUILD distcc-3.1-r5.ebuild 4867 RMD160 99c9d2c52b701c54303effa47f049c5a849616b9 SHA1 f8759677b1992138efe682a7d34a93eeb25b8db5 SHA256 7fde4e10ea027463acbb9b592fc404ee7d27b91df0a7136009418465ec140b19
 EBUILD distcc-3.2_rc1.ebuild 5740 RMD160 f28c39be9c13d6b75ecf002ae9fc7b783c062528 SHA1 4ca74f8b74949468589eb08e2652f08689b9b969 SHA256 ad8aea783fe909d61496c7196f4c6bb901b3f116330449c07f9a766419bf199f
-MISC ChangeLog 38274 RMD160 7a2e6ea658fd58bfa07429c7dccbf4450ef377c4 SHA1 8246fd0186ae8fadac5b2706042eb98d9d1cd06c SHA256 63d17d0de8ba9ab827b06fa4955b71fd469218616bc39e4672859e215f42fe45
+MISC ChangeLog 38494 RMD160 6810000d9719d127b113ec98a026d90b0f5590e2 SHA1 93eb93ad1d25b58079f2227b6bb9f91143ef2cb7 SHA256 f70873f581173f7134abbe5d3de500d396ba54118cf45f568b1e711923b48e47
 MISC metadata.xml 546 RMD160 51a7caedb84842f9efa58ce9ec9da75b60e9378d SHA1 0d8767f8e7ca64a5c2c00eb4c20102955c2c12c1 SHA256 e94ab6ea446d8831bc33afa52dc75b25255bef5a05a1c2af22ba5b1ffc8d55d8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (Darwin)
 
-iEYEARECAAYFAk7sxKgACgkQX3X2B8XHTok57ACfYF6WHbiPP/7imJyPQLF7fIDn
-63AAmwXZIXh/OLtZ/xW4AAsccz+0+CPK
-=rhy/
+iEYEARECAAYFAk7syn0ACgkQX3X2B8XHTok/PACgl7m06D6CHEudldJvkYdBnq5o
+od4AnixRZwrnSwL7oZaSRzBWsT+7TX0q
+=kB2s
 -----END PGP SIGNATURE-----
