@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-devel/distcc/ChangeLog,v 1.211 2011/10/28 05:41:06 matsuu Exp $
 
+  17 Dec 2011; Fabian Groffen <grobian@gentoo.org> -distcc-3.0-r4.ebuild,
+  -distcc-3.1-r4.ebuild:
+  Drop old from Prefix, distcc-config --install no longer exists in current
+  versions (hence mask from #210268) can go
+
 *distcc-3.2_rc1 (28 Oct 2011)
 
   28 Oct 2011; MATSUU Takuto <matsuu@gentoo.org> -distcc-3.1-r4.ebuild,
